add tags for file names

--- a/latex/lab_cov.tex
+++ b/latex/lab_cov.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \begin{center}
-{\large \bf Lab Exercise: Samples of a covariance matrix} \\
+{\large \bf Lab Exercise: Samples of a covariance matrix [cov]} \\
 %GEOS 626: Applied Seismology, Carl Tape \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
