--- a/latex/lab_mogi.tex
+++ b/latex/lab_mogi.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Modeling subsurface volcanic sources using InSAR data} \\
+{\large \bf Lab Exercise: Modeling subsurface volcanic sources using InSAR data [mogi]} \\
 Zhong Lu, Franz Meyer, Carl Tape %, Peter Webley
 \\
 GEOS 657: Microwave Remote Sensing \\
@@ -27,7 +27,7 @@ University of Alaska Fairbanks \\
 %Assigned: April 11, 2013 --- Due: April 16, 2013 \\
 %GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 %Assigned: February 9, 2012 --- Due: February 21, 2012 \\
-Location: WRRB 004 computer lab \\
+%Location: WRRB 004 computer lab \\
 Last compiled: \today
 \end{spacing}
 
