--- a/latex/lab_newton.tex
+++ b/latex/lab_newton.tex
@@ -19,7 +19,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Iterative Newton method} \\
+{\large \bf Lab Exercise: Iterative Newton method [newton]} \\
 GEOS 626: Applied Seismology, Carl Tape \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 %Assigned: February 9, 2012 --- Due: February 21, 2012
