--- a/latex/lab_svdgeom.tex
+++ b/latex/lab_svdgeom.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Geometry of the singular value decomposition} \\
+{\large \bf Lab Exercise: Geometry of the singular value decomposition [svdgeom]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
 \end{spacing}
