--- a/latex/lab_svdspec.tex
+++ b/latex/lab_svdspec.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Singular value spectra} \\
+{\large \bf Lab Exercise: Singular value spectra [svdspec]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
 \end{spacing}
@@ -47,9 +47,6 @@ where $j$ ranges from 1 to $p$ and $s_p > 0$.
 \subsection*{Instructions}
 
 \begin{enumerate}
-\item The function \verb+ex_getG.m+ will return the forward linear model, $\bG$, for four models in \citet{AsterE2}. Analyze the plots of $\bG$ for each of the 8 examples listed at the top of \verb+ex_getG.m+. Make sure you understand why they look the way they do.
-
-\item Set \verb+bfigure = false+ in \verb+ex_getG.m+, then create a new script that will call \verb+ex_getG.m+ and plot the singular value spectrum for each of the 8 examples.
 
 \item \citet[][p.~74]{AsterE2} provides criteria for classifying the ``posed-ness'' of a linear inverse problem based on the singular values, $s_j$:
 %
@@ -60,7 +57,13 @@ where $j$ ranges from 1 to $p$ and $s_p > 0$.
 \item severely ill-posed: $s_j = k e^{-\alpha j}$
 \end{enumerate}
 %
+Here $k$ and $\alpha$ are unknown.
+
 Transform each equation so that it can be written as the equation of a line. This should inform how to plot the singular values.
+
+\item The function \verb+ex_getG.m+ will return the forward linear model $\bG$ for four models in \citet{AsterE2}. Analyze the matrixplots of $\bG$ for each of the 8 examples listed at the top of \verb+ex_getG.m+. Make sure you understand why they look the way they do.
+
+\item Set \verb+bfigure = false+ in \verb+ex_getG.m+, then create a new script that will call \verb+ex_getG.m+ and plot the singular value spectrum for each of the 8 examples.
 
 \item Based the singular value spectra, mark (a), (b), or (c) next to each example below. Matlab's \verb+polyfit+ may be helpful. 
 %
