--- a/latex/lab_ch2.tex
+++ b/latex/lab_ch2.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Aster examples, Chapters 2-3} \\
+{\large \bf Lab Exercise: Aster examples, Chapters 2-3 [ch2]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today \\
 %\textcolor{red}{Answer questions in red for lab credit}
