--- a/latex/lab_pca.tex
+++ b/latex/lab_pca.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: Principal component analysis} \\
+{\large \bf Lab Exercise: Principal component analysis [pca]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
 \end{spacing}
