--- a/latex/lab_sampling.tex
+++ b/latex/lab_sampling.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: The rejection method of generating samples} \\
+{\large \bf Lab Exercise: The rejection method of generating samples [sampling]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
 \end{spacing}
