--- a/latex/lab_svdball.tex
+++ b/latex/lab_svdball.tex
@@ -17,7 +17,7 @@
 
 \begin{spacing}{1.2}
 \centering
-{\large \bf Lab Exercise: SVD approach to ballistic problem} \\
+{\large \bf Lab Exercise: SVD approach to ballistic problem [svdball]} \\
 GEOS 627: Inverse Problems and Parameter Estimation, Carl Tape \\
 Last compiled: \today
 \end{spacing}
