--- a/latex/hw627_header.tex
+++ b/latex/hw627_header.tex
@@ -45,6 +45,9 @@
 % provide space for students to write their solutions
 \newcommand{\vertgap}{\vspace{1cm}}
 
+\newcommand{\Ucolor}{\textcolor{red}{\bU}}
+\newcommand{\Vcolor}{\textcolor{blue}{\bV}}
+
 \newcommand{\Gcolor}{\textcolor{red}{\bU}\bS\textcolor{blue}{\bV^T}}
 \newcommand{\Gpcolor}{\textcolor{red}{\bU_p}\,\bS_p\textcolor{blue}{\bV_p^T}}
 \newcommand{\Gdcolor}{\textcolor{blue}{\bV_p}\,\bS_p^{-1}\textcolor{red}{\bU_p^T}}
