--- a/latex/hw_mogi.tex
+++ b/latex/hw_mogi.tex
@@ -22,8 +22,9 @@ GEOS 627: Inverse Problems and Parameter Estimation \\
 University of Alaska Fairbanks \\
 %Assigned: April 11, 2013 --- Due: April 16, 2013 \\
 %Assigned: April 9, 2015 --- Due: April 16, 2015 \\
-Assigned: April 6, 2017 \\
-Due: April 12, 2017 [Tape]; April 18, 2017 [Meyer] \\
+%Assigned: April 6, 2017 \\
+%Due: April 12, 2017 [Tape]; April 18, 2017 [Meyer] \\
+Assigned: November 6, 2019 --- Due: November 13, 2019 \\
 Last compiled: \today
 \end{spacing}
 
@@ -36,14 +37,13 @@ Last compiled: \today
 
 \item The problem set involves reading, running, and writing some Matlab scripts. You are welcome to work together on the ``Questions for all students.''
 
-\item Primary Matlab scripts (note: for 627 students these are in the directory \verb+mogi+ within \verb+inv2017+):
+\item Primary Matlab scripts (note: for 627 students these are in the directory \verb+mogi+ within \repodir):
 \begin{itemize}
 \item \verb+read_data.m+: loads InSAR observations
 \item \verb+plot_model.m+: plots InSAR field, which can be observed or synthetic
 \item \verb+mogi2insar.m+: uses Mogi forward model to simulate InSAR surface deformation signals
 %\item \verb+xy_gridsearch.m+: grid search for finding the best-fitting geographic source location
 \end{itemize}
-
 
 \end{itemize}
 
