--- a/latex/lab_sampling.tex
+++ b/latex/lab_sampling.tex
@@ -27,7 +27,7 @@ Last compiled: \today
 \subsection*{Overview}
 
 \begin{itemize}
-\item The purpose of this exercise is to understand one particular method of generating samples from an arbitrary probability distribution. The sampling method, known as the {\em rejection method}, was introduced by \citet{vonNeumann1951} and is also discussed in Section 2.3.2 of \citet{Tarantola2005}. One example of its application can be found in \citet{SilwalTape2016} for the case of a three-dimensional model parameter space defining the orientation of a earthquake source mechanism.
+\item The purpose of this exercise is to understand one particular method of generating samples from an arbitrary probability distribution. The sampling method, known as the {\em rejection method}, was introduced by \citet{vonNeumann1951} and is also discussed in Section 2.3.2 of \citet{Tarantola2005}. One example of its application can be found in \citet{SilwalTape2016} for the case of a three-dimensional model parameter space defining the orientation of an earthquake source mechanism.
 
 We use the rejection method to generate samples of an arbitrary distribution. As far as I know, there is no such function in Matlab to do this. (Let me know if you find one!)
 %    http://www.mathworks.com/help/stats/common-generation-methods.html#br5k9hi-4
@@ -67,7 +67,7 @@ cp lab_sampling_template.m lab_sampling.m
 
 \vertgap
 
-\item What does the Matlab function \verb+rand+ do? Write a command to return a set of $n$ numbers that are uniformly distributed on the interval $[a,b]$.
+\item Write a command to return a set of $n$ numbers that are uniformly distributed on the interval $[a,b]$.
 
 \vertgap
 
@@ -91,7 +91,7 @@ Define $A = \max(p(x))$.
 \end{enumerate}
 \end{spacing}
 
-\item Explain the pattern in \refFig{fig}c and how it occurs. Comment out the first \verb+break+ statement to annotate the plot in (a) to help your understanding.
+\item Explain the pattern in \refFig{fig}c and how it occurs. Comment out the first \verb+error+ statement to annotate the plot in (a) to help your understanding.
 
 What fraction of $p(x_i)/A$ are $<$0.05?
 
@@ -99,7 +99,7 @@ What fraction of $p(x_i)/A$ are $>$0.95?
 
 \vertgap
 
-\item Comment out the second \verb+break+ statement. Make sure you understand the relationships among the four subplots. (Note that only the fourth subplot is new.)
+\item Comment out the second \verb+error+ statement. Make sure you understand the relationships among the four subplots. (Note that only the fourth subplot is new.)
 
 \vertgap
 
